[package]
name = "onionoo"
repository= "https://gitlab.com/spacepirate/onionoo-rs"
license = "MIT"
description = "Wrapper for the Onionoo Tor network status and metrics protocol, providing a convenient interface to query information about Tor relays and bridges."
keywords = ["api-wrapper", "tor", "metrics", "observability"]
categories = ["api-bindings"]
version = "0.1.0"
edition = "2024"
exclude = [
    "examples/*",
    "tests/*",
]
[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
